# cursive-desc

./: .gitignore  Cargo.toml  README.md
cursive_callback/: Cargo.toml
cursive_callback/src/: lib.rs
cursive_callback_macro/: Cargo.toml
cursive_callback_macro/examples/: callback_macro.rs
cursive_callback_macro/src/: lib.rs
examples/: Cargo.toml  dialog.rs
src/: error.rs  lib.rs  parser.rs  utils.rs
