[package]
name = "cursive_desc"
version = "0.1.0"
authors = ["Robin Wils <rwils@mail.corp.sentryo.net>"]
edition = "2018"

[workspace]
members = [ "examples" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = [ "derive"] }
serde_json = "*"
cursive = "*"
