[package]
name = "cursive_desc"
version = "0.1.0"
authors = ["Robin Wils <rwils@mail.corp.sentryo.net>"]
edition = "2018"

[workspace]
members = [ "examples", "cursive_callback_macro" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cursive_callback_macro = { path = "cursive_callback_macro" }
cursive_callback = { path = "cursive_callback" }
serde = { version = "1.0", features = [ "derive"] }
serde_json = "*"
cursive = "*"
