[package]
name = "cursive_desc_examples"
version = "0.1.0"
authors = ["Robin Wils <rwils@mail.corp.sentryo.net>"]
edition = "2018"

[dependencies]
cursive_desc = { path = ".." }
cursive_callback = { path = "../cursive_callback" }
cursive_callback_macro = { path = "../cursive_callback_macro" }
cursive = "*"
log = { version = "*", features = ["max_level_info", "release_max_level_warn"] }
